# Legal-OS

./: .gitignore  DEVELOPMENT.md  Makefile  README.md  certification_challenge_report.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  checklist_results.json  clause_extraction_results.json  combined_results.json  diligence_memo_combined.md  diligence_memo_freedom.md  main.py  orchestration_results.json  pyproject.toml  ragas_evaluation_results.csv  ragas_evaluation_results.json  source_tracker_results.json  test_react_agent.py
backend/app/: __init__.py  main.py
backend/app/agents/: README.md  __init__.py  checklist.py  clause_extraction.py  clause_extraction_backup.py  ingestion.py  risk_scoring.py  summary.py
backend/app/api/: __init__.py
backend/app/api/v1/: router.py
backend/app/core/: config.py
backend/app/models/: __init__.py  agent.py  api.py  document.py  orchestration.py  retriever.py
backend/app/orchestration/: __init__.py  pipeline.py
backend/app/pipelines/: __init__.py  ingestion_pipeline.py
backend/app/rag/: chunking.py  evaluation.py  evaluation_langchain.py  pipeline.py  retrievers.py  shared.py  vector_store.py
backend/golden_dataset/: sgd_benchmark.csv  sgd_benchmark_20251020_051652.csv
backend/tests/: __init__.py  test_api.py  test_api_orchestration.py  test_checklist.py  test_clause_extraction.py  test_ingestion.py  test_main.py  test_notebook_e01.py  test_orchestration.py  test_rag.py  test_risk_scoring.py  test_sgd_generation.py  test_source_tracker.py  test_summary.py  test_swappable_retrievers.py
(+102 files in other folders)
